# TheFlightGame

./: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  imgui.ini  main.cpp
assets/: credits.txt  fonts.impfile  models.impfile  sfx.impfile  shaders.impfile  textures.impfile
assets/models/: balloon.mtl  barrel.mtl  blimp.mtl  bullet.mtl  douglas.mtl  plane.mtl  propeller.mtl  ufo.mtl  warship.mtl
assets/shaders/: attitudefrag.glsl  explosionfrag.glsl  explosionvert.glsl  fuelfrag.glsl  instancedvert.glsl  minimapfrag.glsl  simpletexturedfrag.glsl  skyboxfrag.glsl  skyboxvert.glsl  speedfrag.glsl  terrainfrag.glsl  terrainvert.glsl  textured-frag.glsl  textured-simple-frag.glsl  trailvert.glsl  tree-vert.glsl  vert.glsl  vert2d.glsl  verticaltapefrag.glsl  waterfrag.glsl  watersimplefrag.glsl
assets/textures/skybox/: credits.txt
include/fast_obj/: fast_obj.h
include/glad/: glad.h
src/: arcade_mode.cpp  assets.cpp  assets.h  balloon.cpp  barrel.cpp  camera.cpp  camera.h  chunkdecorations.cpp  chunktable.cpp  colors.h  dev_mode.cpp  display.cpp  enemies.cpp  fast_obj.c  game.cpp  game.h  geometry.cpp  geometry.h  gfx.cpp  gfx.h  glad.c  gui.cpp  gui.h  importfile.cpp  importfile.h  infworld.cpp  infworld.h  logger.h  menu.cpp  noise.cpp  noise.h  opengl.h  plants.cpp  plants.h  player.cpp  props.cpp  shader.cpp  shader.h  ship.cpp  stb_image_impl.c  (+4 more)
